k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canaryguard-stable
  namespace: canaryguard
  labels:
    app: canaryguard
spec:
  type: ClusterIP

  selector:
    app: canaryguard

  ports:
    - name: http
      port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: canaryguard-canary
  namespace: canaryguard
  labels:
    app: canaryguard
spec:
  type: ClusterIP

  selector:
    app: canaryguard

  ports:
    - name: http
      port: 80
      targetPort: 3000
