k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: canaryguard
  namespace: canaryguard

spec:
  ingressClassName: nginx

  rules:
    - host: canaryguard.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: canaryguard-stable

                port:
                  number: 80
